@@ -1,3 +1,15 @@
+2007-03-23  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/color.h src/graphics.c (plot_image_or_update_axes)
+	term/pdf.trm (PDF_filled_polygon) src/color.c (filled_quadrangle
+	filled_polygon_3dcoods filled_polygon_3dcoords_zfixed):
+	Change gpiPoints to contain signed x,y values. This is what the
+	explanatory comment always implied ("same as in gd.h"), but it 
+	wasn't true.  The change fixes several image and polygon clipping
+	problems, including segfaults in the pdf driver.  It also fixes
+	broken filledcurves on 64-bit machines.
+	Bug #1612502
+
 2007-03-21 Daniel Sebald  <daniel.sebald@ieee.org>
 
 	* src/graphics.c (boundary): The change of 2007-02-25 overlooked the
